--- a/views/37.ejs
+++ b/views/37.ejs
@@ -51,7 +51,7 @@
       </tr>
       <tr>
         <th>Registration Unit Name</th>
-        <td><%= "SHIVRAHI %></td>
+        <td><%= "SHIVRAHI" %></td>
       </tr>
        <tr>
         <th>Registration Unit Code</th>
