--- a/views/38.ejs
+++ b/views/38.ejs
@@ -27,7 +27,7 @@
       </tr>
       <tr>
         <th>Name</th>
-        <td><%= "  PARWATI DEVI``" %></td>
+        <td><%= "  PARWATI DEVI" %></td>
       </tr>
       <tr>
         <th>Date of Death</th>
